Added online appendix

--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@ To model entities to incorporate in the context graph, you need to provide</p>
 
 <p>To evaluate the framework, we instantiated an application model for IBM's active-deploy (<a href="https://github.com/IBM-Bluemix/active-deploy">https://github.com/IBM-Bluemix/active-deploy</a>) and performed a case study evaluation. As part of an online appendix, we provide a detailed log of steps taken and traces inspected on a task-level for the baseline (Kibana) and our approach:</p>
 
-<pre><code>- [online-appendix.txt]
-</code></pre>
+<ul>
+    <li><a href="online-appendix.txt">Online Appendix Textfile</a></li>
+</ul>
 
 <h3>
 <a id="disclaimer" class="anchor" href="#disclaimer" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Disclaimer</h3>
